--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-pcre": "*",
         "ext-json": "*",
         "ext-xml": "*",
-        "symfony/property-info": "~3.4|~4.0|~5.0"
+        "symfony/property-info": "~3.4|~4.0|~5.0|~6.0|~7.0"
     },
     "require-dev": {
         "ext-openssl": "*",
