--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     },
     "require": {
         "php": ">=7.2",
-        "guzzlehttp/guzzle": "^6.3",
-        "guzzlehttp/psr7": "^1.5",
-        "guzzlehttp/promises": "^1.3",
+        "guzzlehttp/guzzle": "^6.3|^7",
+        "guzzlehttp/psr7": "^1.5|^2",
+        "guzzlehttp/promises": "^1.3|^2",
         "ext-pcre": "*",
         "ext-json": "*",
         "ext-xml": "*",
@@ -29,9 +29,6 @@
         "ext-dom": "*",
         "ext-pcntl": "*",
         "phpunit/phpunit": "^8.1",
-        "behat/behat": "^3.5",
-        "friendsofphp/php-cs-fixer": "^2.15",
-        "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
         "psr-4": {
