Fix for trailing comma

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "ext-openssl": "*",
         "ext-dom": "*",
         "ext-pcntl": "*",
-        "phpunit/phpunit": "^8.1",
+        "phpunit/phpunit": "^8.1"
     },
     "autoload": {
         "psr-4": {
