--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "ext-pcre": "*",
         "ext-json": "*",
         "ext-xml": "*",
+        "ext-soap": "*",
+        "ext-simplexml": "*",
         "symfony/property-info": "~3.4|~4.0|~5.0|~6.0|~7.0"
     },
     "require-dev": {
